fix body vertical overflow

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@ body {
     min-height: 100vh;
     margin: 0;
     padding: 0 8px 8px 8px;
+    box-sizing: border-box;
 }
 
 a {
